RESOLVED FIXED106941
Fix texImage2D from a WebGL canvas.
https://bugs.webkit.org/show_bug.cgi?id=106941
Summary Fix texImage2D from a WebGL canvas.
John Bauman
Reported 2013-01-15 13:25:47 PST
Fix texImage2D from a WebGL canvas.
Attachments
Patch (5.22 KB, patch)
2013-01-15 13:28 PST, John Bauman
no flags
John Bauman
Comment 1 2013-01-15 13:28:36 PST
Kenneth Russell
Comment 2 2013-01-15 13:33:53 PST
Comment on attachment 182839 [details] Patch Looks good. Let's wait for it to clear the EWS bots before setting cq+. r=me
WebKit Review Bot
Comment 3 2013-01-17 10:09:43 PST
Comment on attachment 182839 [details] Patch Rejecting attachment 182839 [details] from commit-queue. jbauman@chromium.org does not have committer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Review Bot
Comment 4 2013-01-17 10:34:38 PST
Comment on attachment 182839 [details] Patch Clearing flags on attachment: 182839 Committed r139989: <http://trac.webkit.org/changeset/139989>
WebKit Review Bot
Comment 5 2013-01-17 10:34:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.