Fix texImage2D from a WebGL canvas. https://bugs.webkit.org/show_bug.cgi?id=106941

Patch by John Bauman <jbauman@chromium.org> on 2013-01-17
Reviewed by Kenneth Russell.

Source/WebCore:

Clear the copied image whenever the canvas is modified, even if using
accelerated compositing.

Test: fast/canvas/webgl/tex-image-webgl.html

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::markContextChanged):

LayoutTests:

Add test to ensure doing teximage2d from a webgl canvas works. This
test is the same as a webgl conformance test.

* fast/canvas/webgl/tex-image-webgl-expected.txt: Added.
* fast/canvas/webgl/tex-image-webgl.html: Added.

Canonical link: https://commits.webkit.org/125363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139989 268f45cc-cd09-0410-ab3c-d52691b4dbfc